tests/vulpix-tests/unit/negTooManyAnnots.scala
object Test {
  def foo: Int = "LOL" // error // error
}
